--- a/style.css
+++ b/style.css
@@ -25,10 +25,10 @@ button{
   width: 15rem;
 }
 
-#team1SlamButton{
+#userSlamButton{
   /*margin-top: 20px;*/
 }
 
-#team2SlamButton{
+#computerSlamButton{
   margin-top: 20px;
 }
